--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 		<java.version>1.8</java.version>
 		<tomcat.version>9.0.43</tomcat.version>
 		<spring-framework.version>5.2.20.RELEASE</spring-framework.version>
+		<snakeyaml.version>1.32</snakeyaml.version>
 	</properties>
 
 	<dependencies>
