--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
 		<spring-framework.version>6.0.0</spring-framework.version>
 		<snakeyaml.version>1.32</snakeyaml.version>
 		<jackson-bom.version>2.12.7.1 </jackson-bom.version>
+		<log4j2.version>2.17.0 </log4j2.version>
+		<logback.version>1.2.9</logback.version>
 	</properties>
 
 	<dependencies>
